--- a/Project-management/构建工具.md
+++ b/Project-management/构建工具.md
@@ -41,7 +41,7 @@ apt install make
 #### 配置 Makefile 文件
 
 1. 首先需要创建一个项目目录和`.go`结尾的源码
-![目录](/home/yuxiaobo/Pictures/2019-10-14 16-00-15 的屏幕截图.png)
+![目录](/home/yuxiaobo/goProject/src/github.com/yuxiaobo96/personal-blog/image/2019-10-14 16-00-15 的屏幕截图.png)
 2. 编辑`Makefile`文件
 
 ```shell
@@ -69,5 +69,5 @@ make run
 ```
 
 效果如下：
-![](/home/yuxiaobo/Pictures/2019-10-14 16-18-54 的屏幕截图.png)
+![](/home/yuxiaobo/goProject/src/github.com/yuxiaobo96/personal-blog/image/2019-10-14 16-18-54 的屏幕截图.png)
 此时二进制执行文件`cobra`也已存在于`/bin`目录下
